# ray_tracer_challenge

./: Cargo.toml
src/: camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  pattern.rs  plane.rs  png.rs  ppm.rs  ray.rs  rgb.rs  shape.rs  sphere.rs  tuple.rs  two_dimensional.rs  util.rs  world.rs
