[package]
name = "ray_tracer_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"
indicatif = "0.17.0"
itertools = "0.10.3"
png = "0.17.5"
rayon = "1.5.3"

[profile.release]
opt-level = 3
lto = true
